Levels of Detail causes crash with Armature Modifier #40343

Closed
opened 2014-05-24 20:36:56 +02:00 by Raf Colson · 4 comments

System Information
Windows 7 64 bit, Nvidia GeForce GT540M Cuda

Blender Version
Broken: builds after 2.70a official release up to current: Hash 7fb33e5
Worked: 2.70 - 2.70a

Short description of error
Levels of Detail causes Blender to crash with object deformation with the Armature Modifier.

Exact steps for others to reproduce the error
Play the game. Do either one of the following actions:
- quit game (Esc)
- restart game (Return)
- restart scene (Spacebar)

> Blender crashes

This doesn't happen when you disable/remove Level of Detail on the tube first.

Note that this bug has crept in somewhere after 2.70a official release, so it might not be so hard to fix.

LOD_Armature_Modifier_bug.blend

**System Information** Windows 7 64 bit, Nvidia GeForce GT540M Cuda **Blender Version** Broken: builds after 2.70a official release up to current: Hash 7fb33e5 Worked: 2.70 - 2.70a **Short description of error** Levels of Detail causes Blender to crash with object deformation with the Armature Modifier. **Exact steps for others to reproduce the error** Play the game. Do either one of the following actions: - quit game (Esc) - restart game (Return) - restart scene (Spacebar) # > Blender crashes This doesn't happen when you disable/remove Level of Detail on the tube first. Note that this bug has crept in somewhere after 2.70a official release, so it might not be so hard to fix. [LOD_Armature_Modifier_bug.blend](https://archive.blender.org/developer/F90618/LOD_Armature_Modifier_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @raco

Added subscriber: @raco

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Mitchell Stokes self-assigned this 2014-05-28 02:09:39 +02:00

Fix by 7317b4fcf1

Fix by 7317b4fcf1
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40343
No description provided.