Fix 40343: Using replace mesh (e.g., LODs) on a skinned mesh crashes.

Need to use parent->AddRef() in a few places.